# project-scaffold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
bundled-templates/fastapi/: .gitignore  README.md  pyproject.toml  template.toml
bundled-templates/fastapi/src/: main.py
bundled-templates/fastapi/src/routes/: health.py  items.py
bundled-templates/nextjs/: package.json  template.toml
bundled-templates/nextjs/app/: page.tsx
docs/: examples.md  index.html
example-templates/express-api/: README.md  package.json  template.toml
example-templates/express-api/src/: index.ts
example-templates/express-api/src/middleware/: errorHandler.ts
example-templates/express-api/src/routes/: health.ts  items.ts
example-templates/go-cli/: README.md  go.mod  main.go  template.toml
example-templates/go-cli/cmd/: root.go
example-templates/nextjs-app/: README.md  template.toml
example-templates/nextjs-app/src/app/: layout.tsx
example-templates/nodejs-basic/: README.md  package.json  template.toml
example-templates/nodejs-basic/src/: index.ts
example-templates/python-cli/: README.md  pyproject.toml  template.toml
example-templates/python-cli/src/{{project_name}}/: __init__.py  main.py
example-templates/python-fastapi/: README.md  pyproject.toml
example-templates/python-fastapi/src/{{project_name}}/models/: item.py
example-templates/rust-cli/: Cargo.toml  README.md  template.toml
example-templates/rust-cli/src/: main.rs
example-templates/rust-lib/: Cargo.toml  README.md  template.toml
example-templates/rust-lib/src/: lib.rs
src/: bundled.rs  copy.rs  git.rs  global_config.rs  hooks.rs  main.rs  variables.rs
src/commands/: add.rs  config.rs  create.rs  info.rs  list.rs  mod.rs  remove.rs  validate.rs
src/template/: config.rs  loader.rs  mod.rs
tests/: integration.rs
