[package]
name = "project-scaffold"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A simple project template scaffolder CLI"
license = "MIT"
keywords = ["cli", "scaffolder", "template", "project", "generator"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/nisarsyed/project-scaffold"
homepage = "https://github.com/nisarsyed/project-scaffold"
readme = "README.md"
authors = ["Nisar Syed"]

[[bin]]
name = "scaffold"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
regex = "1.10"
dirs = "5.0"
rust-embed = "8.5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
